--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>가나다 GaNaDa</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <h2>가나다</h2>
+        <div class="wrapperCan">
+            <canvas id="world" width="500" height="500"></canvas>
+        </div>
+    </div>
     
 
     
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
